--- a/style.css
+++ b/style.css
@@ -148,6 +148,83 @@ nav .nav-items .nav-item{
     max-width: 50%;
 }
 
+/* Details*/
+.details{
+    margin: 8rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.details h3{
+    color: #fafaf5; 
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+.details h6{
+    color: var(--grey); 
+    font-size: 1rem;
+    margin-bottom: 3rem;
+}
+.details-list{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+    margin-top: 4rem;
+}
+.detail{
+    background: #252731;
+    border-radius: 2rem;
+    color: var(--white);
+    padding: 3rem;
+    box-shadow: 10px 10px 10px rgba(0,0,0, 0.5);
+   
+}
+.detail i{
+    color: #4a41b4;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+.detail h2{
+    color: var(--white);
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+.detail p{
+    color: var(--grey);
+}
+
+/* Footer */
+footer{
+    background-color: #252731;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 20vh;
+    padding: 2rem 0;
+}
+footer h3{
+    color: var(--white);
+    font-size: 2rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid var(--grey);
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+footer p{
+    color: var(--grey);
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+}
+footer i{
+    color: var(--grey);
+    font-size: 1.5rem;
+    margin: 1rem;
+}
+footer i:hover{
+    color: var(--light-purple);
+}
+
 
 
 
